--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 		<script type="text/javascript" src="static/js/fullpage.min.js"></script>
 		<style>
 			#section1 {
-				background-image: url(static/img/1087597778948660627.jpg);
+				background-image: url('http://image.zuma.com/basic/1087597778948660627.jpg');
 			}
 			#section2 {
-				background-image: url(static/img/1110178270522929692.jpg);
+				background-image: url('http://image.zuma.com/basic/1110178270522929692.jpg');
 			}
 			#section3 {
-				background-image: url(static/img/1110178307873215717.jpg);
+				background-image: url('http://image.zuma.com/basic/1110178307873215717.jpg');
 			}
 		</style>
 	</head>
