--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
 			#fp-nav ul li a span, .fp-slidesNav ul li a span { background-color: #fff; }
 			
 			
-			#section1 { background-image: url('http://image.zuma.com/basic/1087597778948660627.jpg'); }
+			#section1 { background-image: url('https://image.zuma.com/basic/1087597778948660627.jpg'); }
 			
 			
-			#section2 { background-image: url('http://image.zuma.com/basic/1110178307873215717.jpg'); }
+			#section2 { background-image: url('https://image.zuma.com/basic/1110178307873215717.jpg'); }
 			#section2 .item { width: 20%; color: #fff; display: inline-block; }
 			#section2 .item h4 { color: #fff; font-size: 23px; font-weight: 500; letter-spacing: 4px; }
 			#section2 .item ul { margin-top: 14px; margin-left: 27%; list-style-type: square; }
 			#section2 .item ul li { font-size: 13px; text-align: left; line-height: 24px; letter-spacing: 1px; }
 			
-			#section3 { background-image: url('http://image.zuma.com/image/1121033044141648520.jpg'); }
+			#section3 { background-image: url('https://image.zuma.com/image/1121033044141648520.jpg'); }
 			#section3 .div31 { width: 100%; height: 100%; position: absolute; top: 0px; background-image: url(''); border: 0px solid rgb(0, 0, 0); background-color: rgba(6, 32, 47, 0.45); }
 			#section3 .div32 { position: absolute; width: 300px; height: 79px; left: 492.5px; top: 191px; transform: rotate(0deg); }
 			#section3 .div33 { position: absolute; width: 1027px; height: 72px; left: 129px; top: 289px; transform: rotate(0deg); }
