--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
 			
 			#section2 { background-image: url('https://image.zuma.com/basic/1110178307873215717.jpg'); }
 			#section2 .item { width: 20%; color: #fff; display: inline-block; }
-			#section2 .item h4 { color: #fff; font-size: 23px; font-weight: 500; letter-spacing: 4px; }
+			#section2 .item h4 { font-size: 1.68vw; font-weight: 500; letter-spacing: 4px; color: #fff; }
 			#section2 .item ul { margin-top: 14px; margin-left: 27%; list-style-type: square; }
-			#section2 .item ul li { font-size: 13px; text-align: left; line-height: 24px; letter-spacing: 1px; }
+			#section2 .item ul li { font-size: 0.98vw; text-align: left; line-height: 24px; letter-spacing: 0.05vw; }
 			
 			#section3 { background-image: url('https://image.zuma.com/image/1121033044141648520.jpg'); }
 			#section3 .div31 { width: 100%; height: 100%; position: absolute; top: 0px; background-image: url(''); border: 0px solid rgb(0, 0, 0); background-color: rgba(6, 32, 47, 0.45); }
-			#section3 .div32 { position: absolute; width: 300px; height: 79px; left: 492.5px; top: 191px; transform: rotate(0deg); }
-			#section3 .div33 { position: absolute; width: 1027px; height: 72px; left: 129px; top: 289px; transform: rotate(0deg); }
-			#section3 .span31 { background-color: rgba(0, 0, 0, 0); box-sizing: border-box; font-size: 60px; color: rgb(255, 255, 255); text-indent: 0.01px; font-weight: 700; }
-			#section3 .span32 { font-size: 60px; color: rgb(0, 178, 255); text-indent: 0.01px; box-sizing: border-box; font-weight: 700; background-color: rgba(0, 0, 0, 0); }
-			#section3 .span33 { font-size: 20px; text-indent: 0.01px; color: rgb(255, 255, 255); box-sizing: border-box; letter-spacing: 0px; line-height: 1.8em; font-family: 方正姚体; background-color: rgba(0, 0, 0, 0); }
+			#section3 .div32 { margin-top: 2%; transform: rotate(0deg); }
+			#section3 .div33 { width: 78%; margin-top: 1%; margin-left: 11%; transform: rotate(0deg); }
+			#section3 .span31 { font-size: 4.5vw; color: rgb(255, 255, 255); text-indent: 0.01px; box-sizing: border-box; font-weight: 700; background-color: rgba(0, 0, 0, 0); }
+			#section3 .span32 { font-size: 4.5vw; color: rgb(0, 178, 255); text-indent: 0.01px; box-sizing: border-box; font-weight: 700; background-color: rgba(0, 0, 0, 0); }
+			#section3 .span33 { font-size: 1.45vw; text-indent: 0.01px; color: rgb(255, 255, 255); box-sizing: border-box; letter-spacing: 0px; line-height: 1.8em; font-family: 方正姚体; background-color: rgba(0, 0, 0, 0); }
 			
 			.hidden { display: none; }
 		</style>
@@ -98,14 +98,10 @@
 				<div class="about">
 					<div class="div31"></div>
 					<div class="div32">
-						<div class="div321">
-							<span class="span31">专业&nbsp; &nbsp;</span><span class="span32">高效</span>
-						</div>
+						<span class="span31">专业&nbsp; &nbsp;</span><span class="span32">高效</span>
 					</div>
 					<div class="div33">
-						<div class="div321">
-							<span class="span33">我们拥有专业的人员、高效的团队，时刻保持着认真、严谨的心态为每一位客户提供优质的服务，我们期待与您一起构建更加完美科学的信息化管理系统。</span>
-						</div>
+						<span class="span33">我们拥有专业的人员、高效的团队，时刻保持着认真、严谨的心态为每一位客户提供优质的服务，我们期待与您一起构建更加完美科学的信息化管理系统。</span>
 					</div>
 				</div>
 			</div>
