--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 			* { margin: 0; padding: 0; }
 			.top { position: fixed; left: 0; right: 0; top: 0; z-index: 999; height: 50px; background-color: rgba(0, 0, 0, 0.6); }
 			.menu { width: 82%; margin: 0 auto; overflow: hidden; }
-			.logo { float: left; margin-top: 9px; }
-			.logo a { display: inline-block; width: 32px; height: 32px; background-image: url(images-14/logo_2x.png); background-size: 32px 32px; }
+			.logo { float: left; margin-top: 1px; }
+			.logo a { display: inline-block; width: 96px; height: 48px; background-image: url(logo.png); background-size: 100%; }
 			.nav { font-size: 0; float: right; margin-top: 14px; }
 			.nav li { display: inline-block; margin-left: 32px; }
 			.nav a { color: #fff; height: 30px; line-height: 30px; text-decoration: none; display: inline-block; font: 14px/1.6 "Microsoft Yahei"; font-weight: 700; }
@@ -62,9 +62,9 @@
 					<a href="#"></a>
 				</h1>
 				<ul class="nav">
-<!-- 					<li class="sy"><a href="#">首页</a></li>
-					<li class="fw"><a href="#">服务</a></li>
-					<li class="gy"><a href="#">关于</a></li> -->
+					<li class="sy"><a href="#section1">首页</a></li>
+					<li class="fw"><a href="#section2">服务</a></li>
+					<li class="gy"><a href="#section3">关于</a></li>
 				</ul>
 			</div>
 		</div>
