--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 						我们的服务
 					</div>
 					<div class="item item1 animated fadeInDown">
-						<img src="https://19866062.s61i.faiusr.com/4/AD0IzsO8CRAEGAAgnsXM6AUojquXpQYwKThG.png" />
+						<img src="https://19866062.s61i.faiusr.com/4/AD0IzsO8CRAEGAAgnsXM6AUojquXpQYwKThG.png.webp" />
 						<h4>品牌网站建设</h4>
 						<ul>
 							<li>品牌官网建设</li>
@@ -94,7 +94,7 @@
 						</ul>
 					</div>
 					<div class="item item2 animated fadeInUp">
-						<img src="https://19866062.s61i.faiusr.com/4/AD0IzsO8CRAEGAAgnsXM6AUo9pfK6QcwMjhG.png" />
+						<img src="https://19866062.s61i.faiusr.com/4/AD0IzsO8CRAEGAAgnsXM6AUo9pfK6QcwMjhG.png.webp" />
 						<h4>移动应用开发</h4>
 						<ul>
 							<li>Android（安卓）开发</li>
@@ -103,7 +103,7 @@
 						</ul>
 					</div>
 					<div class="item item3 animated fadeInDown">
-						<img src="https://19866062.s61i.faiusr.com/4/AD0IzsO8CRAEGAAgnsXM6AUo9OzCtAEwMzhG.png" />
+						<img src="https://19866062.s61i.faiusr.com/4/AD0IzsO8CRAEGAAgnsXM6AUo9OzCtAEwMzhG.png.webp" />
 						<h4>微信平台开发</h4>
 						<ul>
 							<li>小程序开发</li>
@@ -112,7 +112,7 @@
 						</ul>
 					</div>
 					<div class="item item4 animated fadeInUp">
-						<img src="https://19866062.s61i.faiusr.com/4/AD0IzsO8CRAEGAAgnsXM6AUosLLPhAUwNThG.png" />
+						<img src="https://19866062.s61i.faiusr.com/4/AD0IzsO8CRAEGAAgnsXM6AUosLLPhAUwNThG.png.webp" />
 						<h4>业务系统研发</h4>
 						<ul>
 							<li>OA系统</li>
