--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 			#section2 .item h4 { margin-top: 3vh; font-size: 1.68vw; font-weight: 500; letter-spacing: 4px; color: #fff; }
 			#section2 .item ul { margin-top: 14px; margin-left: 27%; list-style-type: square; }
 			#section2 .item ul li { font-size: 0.98vw; text-align: left; line-height: 24px; letter-spacing: 0.05vw; }
-			#section2 .item1 { background: url('https://19866062.s61i.faiusr.com/4/AD0IzsO8CRAEGAAgocXM6AUo8tnYHTD2ATi3Ag.png') no-repeat center; }
-			#section2 .item2 { background: url('https://19866062.s61i.faiusr.com/4/AD0IzsO8CRAEGAAgnsXM6AUov6u8lQcw9gE4twI.png') no-repeat center; }
-			#section2 .item3 { background: url('https://19866062.s61i.faiusr.com/4/AD0IzsO8CRAEGAAgocXM6AUo-8HpaDD2ATi3Ag.png') no-repeat center; }
-			#section2 .item4 { background: url('https://19866062.s61i.faiusr.com/4/AD0IzsO8CRAEGAAgocXM6AUo66un8QQw9gE4twI.png') no-repeat center; }
+			#section2 .item1 { background: url('https://19866062.s61i.faiusr.com/4/AD0IzsO8CRAEGAAgocXM6AUo8tnYHTD2ATi3Ag.png.webp') no-repeat center; }
+			#section2 .item2 { background: url('https://19866062.s61i.faiusr.com/4/AD0IzsO8CRAEGAAgnsXM6AUov6u8lQcw9gE4twI.png.webp') no-repeat center; }
+			#section2 .item3 { background: url('https://19866062.s61i.faiusr.com/4/AD0IzsO8CRAEGAAgocXM6AUo-8HpaDD2ATi3Ag.png.webp') no-repeat center; }
+			#section2 .item4 { background: url('https://19866062.s61i.faiusr.com/4/AD0IzsO8CRAEGAAgocXM6AUo66un8QQw9gE4twI.png.webp') no-repeat center; }
 			#section2 .item img { margin-top: 10vh; }
 			
 			#section3 { background-image: url('https://12186827.s61i.faiusr.com/2/AD0Iy_nnBRACGAAgsuqxywUo68jYpQYwgA848AU.jpg'); }
@@ -85,7 +85,7 @@
 						我们的服务
 					</div>
 					<div class="item item1 animated fadeInDown">
-						<img src="https://19866062.s61i.faiusr.com/4/AD0IzsO8CRAEGAAgnsXM6AUojquXpQYwKThG.png.webp" />
+						<img src="https://19866062.s61i.faiusr.com/4/AD0IzsO8CRAEGAAgnsXM6AUojquXpQYwKThG.png" />
 						<h4>品牌网站建设</h4>
 						<ul>
 							<li>品牌官网建设</li>
@@ -94,7 +94,7 @@
 						</ul>
 					</div>
 					<div class="item item2 animated fadeInUp">
-						<img src="https://19866062.s61i.faiusr.com/4/AD0IzsO8CRAEGAAgnsXM6AUo9pfK6QcwMjhG.png.webp" />
+						<img src="https://19866062.s61i.faiusr.com/4/AD0IzsO8CRAEGAAgnsXM6AUo9pfK6QcwMjhG.png" />
 						<h4>移动应用开发</h4>
 						<ul>
 							<li>Android（安卓）开发</li>
@@ -103,7 +103,7 @@
 						</ul>
 					</div>
 					<div class="item item3 animated fadeInDown">
-						<img src="https://19866062.s61i.faiusr.com/4/AD0IzsO8CRAEGAAgnsXM6AUo9OzCtAEwMzhG.png.webp" />
+						<img src="https://19866062.s61i.faiusr.com/4/AD0IzsO8CRAEGAAgnsXM6AUo9OzCtAEwMzhG.png" />
 						<h4>微信平台开发</h4>
 						<ul>
 							<li>小程序开发</li>
@@ -112,7 +112,7 @@
 						</ul>
 					</div>
 					<div class="item item4 animated fadeInUp">
-						<img src="https://19866062.s61i.faiusr.com/4/AD0IzsO8CRAEGAAgnsXM6AUosLLPhAUwNThG.png.webp" />
+						<img src="https://19866062.s61i.faiusr.com/4/AD0IzsO8CRAEGAAgnsXM6AUosLLPhAUwNThG.png" />
 						<h4>业务系统研发</h4>
 						<ul>
 							<li>OA系统</li>
